--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,9 +1,31 @@
+# for google cloud configuration 
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)        # give access to SHA
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1 # google cloud will not show any warning or any prompts
+    
+
 before install:
-  - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
+  - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d  # file encryption
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account        # google cloud authentication file (encrypt it before push to github)
+  - gcloud config set project multi-k8s-294616   # mutli -- from google project name
+  - gcloud config set compute/zone us-central1-c	# gcp k8s engine zone name
+  - gcloud container clusters get-credentials multi-cluster  # our cluster name
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 
+  - docker build -t vedantdave77/react-test -f ./client/Dockerfile.dev ./client 
+
+script:
+  - docker run -e CI=true vedantdave77/react-test npm test
+
+deploy:
+  provider: script # just run script
+  script: bash ./deploy.sh 
+  on:
+    branch: master # do not touch other feature branch
+  
