--- a/.travis.yaml
+++ b/.travis.yaml
@@ -6,14 +6,14 @@ env:
   global:
     - SHA=$(git rev-parse HEAD)        # give access to SHA
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1 # google cloud will not show any warning or any prompts
-    
+
 
 before install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d  # file encryption
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account        # google cloud authentication file (encrypt it before push to github)
+  - gcloud auth activate-service-account --key-file service-account.json     # google cloud authentication file (encrypt it before push to github)
   - gcloud config set project multi-k8s-294616   # mutli -- from google project name
   - gcloud config set compute/zone us-central1-c	# gcp k8s engine zone name
   - gcloud container clusters get-credentials multi-cluster  # our cluster name
