--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -30,7 +30,7 @@ spec:
           value: '5432'         # values must be string, otherwise gives the error.
         - name: PGDATABASE
           value: postgres
-        - name: POSTGRES_PASSWORD                     # To make security of our database, we config the file with the password. (by running the local command, first create the secret and then apply those data to here.)
+        - name: PGPASSWORD                     # To make security of our database, we config the file with the password. (by running the local command, first create the secret and then apply those data to here.)
           valueFrom:
             secretKeyRef:
               name: pgpassword
