--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -1,9 +1,9 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: k8s-multi-com-tls
+  name: web-deployment-tls
 spec:
-  secretName: k8s-multi-com
+  secretName: web-deployment-com
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
