--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,10 +5,30 @@ metadata:
   annotations: 
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /$1 
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'  # qware ingress about the certificate
+    nginx.ingress.kubernetes.io/sssl-redirect: 'true'      # say nginx to use the https trafic whenever anyone come across the site.
+
 spec:
+  tls:
+    - hosts:
+        - web-deployment.com
+        - www.web-deployment.com
+      secretName: web-deployment-com
   rules:
-    - http:
+    - host: web-deployment.com
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: servide-cluster-ip-service
+              servicePort: 5000
+    - host: www.web-deployment.com
+      http:
         paths:
           - path: /?(.*)
             backend:
